FIX: Strong text on small mobile screens

--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -200,7 +200,10 @@
     }
   }
 
-  .tocando {
-    max-width: 500px;
+  .clippingText {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 250px;
   }
 }
